# LLMServingTuner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FILE_MANIFEST.md  GITHUB_SETUP_README.md  GIT_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md  README.md  __init__.py  config.toml  exceptions.py  pyproject.toml  restore_baseline.sh
config/: config.py
docs/: architecture-report.html  improvements-2-4-7-changelog.html  parallel-pso-code-review.html  parallel-pso-guide.html  parallel-pso-test-report.html
docs/plans/: 2026-01-07-parallel-pso-design.md
examples/: train_from_profile.py  train_from_vllm_profile.py
examples/accuracy/: README.md  evaluate_predictors.py  generate_test_data.py  plot_bs_accuracy.py  test_vidur_minimal.py
examples/tuning/: config-all.toml  config.toml
llmservingtuner/: __init__.py  analysis.py  common.py  sitecustomize.py
llmservingtuner/config/: base_config.py  config.py  constant.py  custom_command.py  model_config.py
llmservingtuner/data_feature/: dataset.py  dataset_with_modin.py  dataset_with_swifter.py  v1.py
llmservingtuner/inference/: common.py  constant.py  dataset.py  file_reader.py  simulate.py  simulate_vllm.py  state_eval_v1.py  utils.py
llmservingtuner/model/: __init__.py  vidur_model.py  xgb_state_model.py
llmservingtuner/optimizer/: analyze_profiler.py  cbo_surrogate_model.py  communication.py  custom_process.py  fitness_calculator.py  (+8 more)
optimizer/: optimizer.py
tests/: __init__.py  test_parallel_config.py  test_parallel_dispatcher.py  test_parallel_monitoring.py  test_parallel_remote.py  test_parallel_service_group.py
(+49 files in other folders)
